--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "redis": "^2.7.1",
+    "tedious": "^2.0.0",
     "winston": "^2.3.1"
   },
   "description": "This is a repogitory for waiter-prototype.",
@@ -44,6 +45,7 @@
     "@types/redis": "^0.12.36",
     "@types/request-promise-native": "^1.0.2",
     "@types/supertest": "^2.0.0",
+    "@types/tedious": "^1.8.29",
     "@types/winston": "^2.3.0",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.4.3",
@@ -77,5 +79,5 @@
     "version": "git add -A",
     "postversion": "git push origin"
   },
-  "version": "1.0.2"
+  "version": "1.0.3"
 }
