--- a/package.json
+++ b/package.json
@@ -70,11 +70,13 @@
   "repository": {},
   "scripts": {
     "build": "tsc",
-    "check": "tslint --type-check --project tsconfig.json -c tslint.json app/**/*.ts server.ts && nsp check && snyk auth && snyk test --ignore-policy",
+    "check": "npm run tslint && nsp check",
     "clean": "rimraf app/**/*.js test/**/*.js docs/**/* npm-debug.log*",
     "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.json",
+    "snyk": "snyk auth && snyk test --ignore-policy",
     "start": "node server.js",
-    "test": "npm run check && mocha --no-timeouts --recursive",
+    "test": "npm run check && mocha",
+    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json app/**/*.ts server.ts test/**/*.ts ",
     "preversion": "npm run clean && npm run build && npm test",
     "version": "git add -A",
     "postversion": "git push origin"
