--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   ],
   "dependencies": {
     "basic-auth": "^1.1.0",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.17.2",
     "cors": "^2.8.3",
-    "debug": "^2.6.3",
-    "express": "^4.15.2",
+    "debug": "^2.6.8",
+    "express": "^4.15.3",
     "express-validator": "^3.1.3",
     "fs-extra": "^2.1.2",
-    "helmet": "^3.5.0",
+    "helmet": "^3.6.1",
     "http-status": "^1.0.1",
-    "jsonwebtoken": "^7.3.0",
+    "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
-    "mongoose": "^4.9.7",
+    "mongoose": "^4.10.2",
     "passport": "^0.3.2",
     "passport-http-bearer": "^1.0.1",
     "redis": "^2.7.1",
-    "tedious": "^2.0.0",
+    "tedious": "^2.0.1",
     "winston": "^2.3.1"
   },
   "description": "This is a repogitory for waiter-prototype.",
@@ -39,25 +39,25 @@
     "@types/http-status": "^0.2.29",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/mocha": "^2.2.40",
-    "@types/mongoose": "^4.7.11",
+    "@types/mongoose": "^4.7.13",
     "@types/passport": "^0.3.3",
     "@types/passport-http-bearer": "^1.0.30",
     "@types/redis": "^0.12.36",
-    "@types/request-promise-native": "^1.0.2",
+    "@types/request-promise-native": "^1.0.5",
     "@types/supertest": "^2.0.0",
     "@types/tedious": "^1.8.29",
-    "@types/winston": "^2.3.0",
+    "@types/winston": "^2.3.2",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.4.3",
-    "mocha": "^3.3.0",
+    "mocha": "^3.4.1",
     "nsp": "^2.6.3",
-    "request-promise-native": "^1.0.3",
+    "request-promise-native": "^1.0.4",
     "rimraf": "^2.6.1",
-    "snyk": "^1.29.0",
+    "snyk": "^1.30.1",
     "supertest": "^3.0.0",
-    "tslint": "^4.5.1",
-    "tslint-microsoft-contrib": "^4.0.1",
-    "typescript": "^2.3.2"
+    "tslint": "^5.3.2",
+    "tslint-microsoft-contrib": "^5.0.0",
+    "typescript": "^2.3.3"
   },
   "engines": {
     "node": ">=6.9.1",
@@ -76,10 +76,10 @@
     "snyk": "snyk auth && snyk test --ignore-policy",
     "start": "node server.js",
     "test": "npm run check && mocha",
-    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json app/**/*.ts server.ts test/**/*.ts ",
+    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json app/**/*.ts server.ts test/**/*.ts",
     "preversion": "npm run clean && npm run build && npm test",
     "version": "git add -A",
-    "postversion": "git push origin"
+    "postversion": "git push origin --tags"
   },
   "version": "1.0.6"
 }
