--- a/package.json
+++ b/package.json
@@ -73,9 +73,10 @@
     "check": "npm run tslint && nsp check",
     "clean": "rimraf app/**/*.js test/**/*.js docs/**/* npm-debug.log*",
     "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.json",
+    "mocha": "mocha",
     "snyk": "snyk auth && snyk test --ignore-policy",
     "start": "node server.js",
-    "test": "npm run check && mocha",
+    "test": "npm run check && npm run mocha",
     "tslint": "tslint --type-check --project tsconfig.json -c tslint.json app/**/*.ts server.ts test/**/*.ts",
     "preversion": "npm run clean && npm run build && npm test",
     "version": "git add -A",
