--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.3",
     "debug": "^2.6.8",
     "express": "^4.15.3",
+    "express-jwt": "^5.3.0",
     "express-validator": "^3.1.3",
     "fs-extra": "^2.1.2",
     "helmet": "^3.6.1",
@@ -21,8 +22,6 @@
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "mongoose": "^4.10.2",
-    "passport": "^0.3.2",
-    "passport-http-bearer": "^1.0.1",
     "redis": "^2.7.1",
     "tedious": "^2.0.1",
     "winston": "^2.3.1"
@@ -34,14 +33,13 @@
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.29",
     "@types/express": "^4.0.35",
+    "@types/express-jwt": "0.0.34",
     "@types/fs-extra": "0.0.37",
     "@types/helmet": "0.0.33",
     "@types/http-status": "^0.2.29",
     "@types/jsonwebtoken": "^7.2.0",
     "@types/mocha": "^2.2.40",
     "@types/mongoose": "^4.7.13",
-    "@types/passport": "^0.3.3",
-    "@types/passport-http-bearer": "^1.0.30",
     "@types/redis": "^0.12.36",
     "@types/request-promise-native": "^1.0.5",
     "@types/supertest": "^2.0.0",
