--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^7.4.1",
     "moment": "^2.18.1",
     "mongoose": "^4.10.2",
+    "mssql": "^4.0.4",
     "redis": "^2.7.1",
     "tedious": "^2.0.1",
     "winston": "^2.3.1"
@@ -40,6 +41,7 @@
     "@types/jsonwebtoken": "^7.2.0",
     "@types/mocha": "^2.2.40",
     "@types/mongoose": "^4.7.13",
+    "@types/mssql": "^4.0.1",
     "@types/redis": "^0.12.36",
     "@types/request-promise-native": "^1.0.5",
     "@types/supertest": "^2.0.0",
