--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     }
   ],
   "dependencies": {
+    "@motionpicture/waiter-domain": "git+https://tetsu:M0P!Xmopix@m-p.backlog.jp/git/WAITER/domain.git#WAITER-3",
     "basic-auth": "^1.1.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
@@ -44,7 +45,7 @@
     "@types/winston": "^2.3.2",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.4.3",
-    "mocha": "^3.4.1",
+    "mocha": "^3.4.2",
     "nsp": "^2.6.3",
     "request-promise-native": "^1.0.4",
     "rimraf": "^2.6.1",
