--- a/package.json
+++ b/package.json
@@ -9,20 +9,17 @@
     }
   ],
   "dependencies": {
-    "@motionpicture/waiter-domain": "git+https://tetsu:M0P!Xmopix@m-p.backlog.jp/git/WAITER/domain.git#WAITER-3",
+    "@motionpicture/waiter-domain": "git+https://tetsu:M0P!Xmopix@m-p.backlog.jp/git/WAITER/domain.git#feature/WAITER-3",
     "basic-auth": "^1.1.0",
     "body-parser": "^1.17.2",
     "cors": "^2.8.3",
     "debug": "^2.6.8",
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
-    "express-validator": "^3.1.3",
+    "express-validator": "^3.2.1",
     "helmet": "^3.6.1",
     "http-status": "^1.0.1",
     "moment": "^2.18.1",
-    "mongoose": "^4.10.2",
-    "mssql": "^4.0.4",
-    "redis": "^2.7.1",
     "winston": "^2.3.1"
   },
   "description": "This is a repogitory for waiter-prototype.",
@@ -31,29 +28,26 @@
     "@types/body-parser": "0.0.34",
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.29",
-    "@types/express": "^4.0.35",
+    "@types/express": "^4.0.36",
     "@types/express-jwt": "0.0.34",
     "@types/helmet": "0.0.33",
     "@types/http-status": "^0.2.29",
-    "@types/jsonwebtoken": "^7.2.0",
+    "@types/jsonwebtoken": "^7.2.2",
     "@types/mocha": "^2.2.40",
-    "@types/mongoose": "^4.7.13",
-    "@types/mssql": "^4.0.1",
-    "@types/redis": "^0.12.36",
-    "@types/request-promise-native": "^1.0.5",
-    "@types/supertest": "^2.0.0",
-    "@types/winston": "^2.3.2",
+    "@types/request-promise-native": "^1.0.6",
+    "@types/supertest": "^2.0.1",
+    "@types/winston": "^2.3.3",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.4.3",
     "mocha": "^3.4.2",
     "nsp": "^2.6.3",
     "request-promise-native": "^1.0.4",
     "rimraf": "^2.6.1",
-    "snyk": "^1.30.1",
+    "snyk": "^1.36.2",
     "supertest": "^3.0.0",
-    "tslint": "^5.3.2",
-    "tslint-microsoft-contrib": "^5.0.0",
-    "typescript": "^2.3.3"
+    "tslint": "^5.5.0",
+    "tslint-microsoft-contrib": "^5.0.1",
+    "typescript": "^2.4.1"
   },
   "engines": {
     "node": ">=6.9.1",
