# WAITER-7 ### Changed - マルチクライアントを設定できるように対応。
### Removed
- クライアント認証を削除。

--- a/web.config
+++ b/web.config
@@ -2,10 +2,11 @@
 <configuration>
     <system.webServer>
         <handlers>
-            <add name="iisnode" path="/server.js" verb="*" modules="iisnode" />
+            <add name="iisnode" path="dst/server.js" verb="*" modules="iisnode" />
         </handlers>
         <rewrite>
             <rules>
+                <!-- https強制 -->
                 <rule name="http2https" stopProcessing="true">
                     <match url="(.*)" />
                     <conditions>
@@ -14,12 +15,9 @@
                     <action type="Redirect" redirectType="Found" url="https://{HTTP_HOST}/{R:1}" />
                 </rule>
 
-                <!-- All other URLs are mapped to the node.js site entry point -->
+                <!-- 全てnode.jsへ -->
                 <rule name="DynamicContent">
-                    <conditions>
-                        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="True"/>
-                    </conditions>
-                    <action type="Rewrite" url="server.js" appendQueryString="true"/>
+                    <action type="Rewrite" url="dst/server.js" appendQueryString="true"/>
                 </rule>
             </rules>
         </rewrite>
