--- a/iisnode.yml
+++ b/iisnode.yml
@@ -1,7 +1,7 @@
 devErrorsEnabled: false
 enableXFF: false
 loggingEnabled: true
-maxConcurrentRequestsPerProcess: 1024
+# maxConcurrentRequestsPerProcess: 1024
 nodeProcessCountPerApplication: 0
 maxNamedPipeConnectionRetry: 200
 namedPipeConnectionRetryDelay: 250
