--- a/package.json
+++ b/package.json
@@ -9,65 +9,81 @@
     }
   ],
   "dependencies": {
-    "@motionpicture/waiter-domain": "^1.0.0",
-    "basic-auth": "^1.1.0",
-    "body-parser": "^1.17.2",
-    "cors": "^2.8.3",
-    "debug": "^2.6.8",
-    "express": "^4.15.3",
+    "@motionpicture/waiter-domain": "^2.0.0-alpha.0",
+    "basic-auth": "^2.0.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
     "express-jwt": "^5.3.0",
-    "express-validator": "^3.2.1",
-    "helmet": "^3.6.1",
+    "express-validator": "^4.2.1",
+    "helmet": "^3.9.0",
     "http-status": "^1.0.1",
-    "moment": "^2.18.1",
-    "winston": "^2.3.1"
+    "moment": "^2.19.1",
+    "winston": "^2.4.0"
   },
   "description": "This is a repogitory for waiter-prototype.",
   "devDependencies": {
-    "@types/basic-auth": "0.0.31",
-    "@types/body-parser": "0.0.34",
+    "@types/basic-auth": "^1.1.2",
+    "@types/body-parser": "^1.16.5",
     "@types/cors": "^2.8.1",
-    "@types/debug": "0.0.29",
-    "@types/express": "^4.0.36",
-    "@types/express-jwt": "0.0.34",
-    "@types/helmet": "0.0.33",
-    "@types/http-status": "^0.2.29",
-    "@types/jsonwebtoken": "^7.2.2",
-    "@types/mocha": "^2.2.40",
-    "@types/request-promise-native": "^1.0.6",
-    "@types/supertest": "^2.0.1",
-    "@types/winston": "^2.3.3",
+    "@types/debug": "0.0.30",
+    "@types/express": "^4.0.37",
+    "@types/express-jwt": "0.0.37",
+    "@types/helmet": "0.0.36",
+    "@types/http-status": "^0.2.30",
+    "@types/jsonwebtoken": "^7.2.3",
+    "@types/mocha": "^2.2.43",
+    "@types/nock": "^8.2.1",
+    "@types/request": "^2.0.5",
+    "@types/request-promise-native": "^1.0.7",
+    "@types/sinon": "^2.3.6",
+    "@types/supertest": "^2.0.3",
+    "@types/winston": "^2.3.6",
+    "coveralls": "^3.0.0",
     "ink-docstrap": "^1.3.0",
-    "jsdoc": "^3.4.3",
-    "mocha": "^3.4.2",
-    "nsp": "^2.6.3",
-    "request-promise-native": "^1.0.4",
-    "rimraf": "^2.6.1",
-    "snyk": "^1.36.2",
+    "jsdoc": "^3.5.5",
+    "mocha": "^4.0.1",
+    "nock": "^9.0.22",
+    "nsp": "^2.8.1",
+    "nyc": "^11.2.1",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
+    "rimraf": "^2.6.2",
+    "sinon": "^4.0.1",
+    "snyk": "^1.42.7",
     "supertest": "^3.0.0",
-    "tslint": "^5.5.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.7.0",
     "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.4.1"
+    "typescript": "^2.5.3"
   },
   "engines": {
     "node": ">=6.9.1",
-    "npm": ">=3.10.8"
+    "npm": ">=5.3.0"
   },
   "keywords": [],
-  "license": "UNLICENSED",
+  "license": "ISC",
   "name": "waiter-prototype",
   "private": true,
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/motionpicture/waiter.git"
+  },
   "scripts": {
     "build": "tsc",
     "check": "npm run tslint && nsp check",
-    "clean": "rimraf app/**/*.js test/**/*.js docs/**/* npm-debug.log*",
-    "jsdoc": "node_modules/.bin/jsdoc -c jsdoc.json",
+    "clean": "rimraf ./dst test/**/*.js ./doc ./coverage npm-debug.log* ./.nyc_output",
+    "doc": "jsdoc -c jsdoc.json",
+    "http-server": "http-server",
     "mocha": "mocha",
-    "snyk": "snyk auth && snyk test --ignore-policy",
-    "start": "node server.js",
-    "test": "npm run check && npm run mocha",
-    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json app/**/*.ts server.ts test/**/*.ts",
+    "coverage": "nyc mocha src/**/*.spec.ts | coveralls",
+    "samples": "http-server ./samples",
+    "snyk": "snyk wizard",
+    "start": "node dst/server.js",
+    "start:development": "node dst/ssl.js",
+    "test": "npm run check && npm run coverage",
+    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json --exclude \"**/*.spec.ts\" src/**/*.ts",
     "preversion": "npm run clean && npm run build && npm test",
     "version": "git add -A",
     "postversion": "git push origin --tags"
