# WAITER-7 ### Added - 現在の発行単位取得エンドポイントを追加。

--- a/.nycrc
+++ b/.nycrc
@@ -11,7 +11,8 @@
         "src/**/*.ts"
     ],
     "exclude": [
-        "**/*.spec.ts"
+        "**/*.spec.ts",
+        "src/app/routes/*.ts"
     ],
     "reporter": [
         "lcov",
