--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,8 +83,8 @@ jobs:
             echo "  NODE_ENV: 'development'" >> ./app.yaml
             echo "  NPM_TOKEN: '${NPM_TOKEN}'" >> ./app.yaml
             echo "  WAITER_PASSPORT_ISSUER: '${WAITER_PASSPORT_ISSUER_DEVELOPMENT}'" >> ./app.yaml
-            echo "  WAITER_CLIENTS: '${WAITER_CLIENTS_DEVELOPMENT}'" >> ./app.yaml
-            echo "  WAITER_DEVELOPER_EMAIL: '${WAITER_DEVELOPER_EMAIL_DEVELOPMENT}'" >> ./app.yaml
+            echo "  WAITER_RULES: '${WAITER_RULES_DEVELOPMENT}'" >> ./app.yaml
+            echo "  WAITER_SECRET: '${WAITER_SECRET_DEVELOPMENT}'" >> ./app.yaml
             echo "  REDIS_HOST: '${REDIS_HOST_DEVELOPMENT}'" >> ./app.yaml
             echo "  REDIS_PORT: ${REDIS_PORT_DEVELOPMENT}" >> ./app.yaml
             echo "  REDIS_KEY: '${REDIS_KEY_DEVELOPMENT}'" >> ./app.yaml
