--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     }
   ],
   "dependencies": {
-    "@motionpicture/waiter-domain": "^2.0.0-alpha.1",
+    "@motionpicture/waiter-domain": "^2.0.0-alpha.2",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.2",
-    "express-jwt": "^5.3.0",
-    "express-validator": "^4.2.1",
+    "express-validator": "^4.3.0",
     "helmet": "^3.9.0",
     "http-status": "^1.0.1",
     "moment": "^2.19.1",
@@ -25,38 +24,37 @@
   "description": "Waiter web application",
   "devDependencies": {
     "@types/basic-auth": "^1.1.2",
-    "@types/body-parser": "^1.16.5",
+    "@types/body-parser": "^1.16.7",
     "@types/cors": "^2.8.1",
     "@types/debug": "0.0.30",
-    "@types/express": "^4.0.37",
-    "@types/express-jwt": "0.0.37",
+    "@types/express": "^4.0.39",
     "@types/helmet": "0.0.36",
     "@types/http-status": "^0.2.30",
     "@types/jsonwebtoken": "^7.2.3",
-    "@types/mocha": "^2.2.43",
+    "@types/mocha": "^2.2.44",
     "@types/nock": "^8.2.1",
-    "@types/request": "^2.0.6",
-    "@types/request-promise-native": "^1.0.7",
-    "@types/sinon": "^2.3.6",
+    "@types/request": "^2.0.7",
+    "@types/request-promise-native": "^1.0.9",
+    "@types/sinon": "^2.3.7",
     "@types/supertest": "^2.0.3",
-    "@types/winston": "^2.3.6",
+    "@types/winston": "^2.3.7",
     "coveralls": "^3.0.0",
     "ink-docstrap": "^1.3.0",
     "jsdoc": "^3.5.5",
     "mocha": "^4.0.1",
-    "nock": "^9.0.22",
+    "nock": "^9.1.0",
     "nsp": "^2.8.1",
-    "nyc": "^11.2.1",
+    "nyc": "^11.3.0",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
-    "sinon": "^4.0.1",
-    "snyk": "^1.42.7",
+    "sinon": "^4.1.2",
+    "snyk": "^1.48.1",
     "supertest": "^3.0.0",
     "ts-node": "^3.3.0",
-    "tslint": "^5.7.0",
+    "tslint": "^5.8.0",
     "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.5.3"
+    "typescript": "^2.6.1"
   },
   "engines": {
     "node": ">=6.9.1",
@@ -73,17 +71,17 @@
   "scripts": {
     "build": "tsc",
     "check": "npm run tslint && nsp check",
-    "clean": "rimraf ./dst test/**/*.js ./doc ./coverage npm-debug.log* ./.nyc_output",
+    "clean": "rimraf ./dst ./doc ./coverage \"npm-debug.log*\" ./.nyc_output",
     "doc": "jsdoc -c jsdoc.json",
     "http-server": "http-server",
     "mocha": "mocha",
-    "coverage": "nyc mocha src/**/*.spec.ts | coveralls",
+    "coverage": "nyc mocha \"src/**/*.spec.ts\" | coveralls",
     "samples": "http-server ./samples",
     "snyk": "snyk wizard",
     "start": "node dst/server.js",
     "start:development": "node dst/ssl.js",
     "test": "npm run check && npm run coverage",
-    "tslint": "tslint --type-check --project tsconfig.json -c tslint.json --exclude \"**/*.spec.ts\" src/**/*.ts",
+    "tslint": "tslint --project tsconfig.json -c tslint.json --exclude \"**/*.spec.ts\" \"src/**/*.ts\"",
     "preversion": "npm run clean && npm run build && npm test",
     "version": "git add -A",
     "postversion": "git push origin --tags"
