--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     }
   ],
   "dependencies": {
-    "@motionpicture/waiter-domain": "^2.0.0-alpha.3",
-    "basic-auth": "^2.0.0",
+    "@motionpicture/waiter-domain": "^2.0.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
@@ -18,14 +17,12 @@
     "express-validator": "^4.3.0",
     "helmet": "^3.9.0",
     "http-status": "^1.0.1",
-    "moment": "^2.19.1",
-    "winston": "^2.4.0"
+    "moment": "^2.19.2"
   },
   "description": "Waiter web application",
   "devDependencies": {
-    "@types/basic-auth": "^1.1.2",
     "@types/body-parser": "^1.16.8",
-    "@types/cors": "^2.8.2",
+    "@types/cors": "^2.8.3",
     "@types/debug": "0.0.30",
     "@types/express": "^4.0.39",
     "@types/helmet": "0.0.36",
@@ -33,13 +30,12 @@
     "@types/jsonwebtoken": "^7.2.3",
     "@types/mocha": "^2.2.44",
     "@types/nock": "^8.2.1",
-    "@types/request": "^2.0.7",
+    "@types/request": "^2.0.8",
     "@types/request-promise-native": "^1.0.10",
     "@types/sinon": "^2.3.7",
-    "@types/supertest": "^2.0.3",
-    "@types/winston": "^2.3.7",
+    "@types/supertest": "^2.0.4",
     "coveralls": "^3.0.0",
-    "ink-docstrap": "^1.3.0",
+    "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.5.5",
     "mocha": "^4.0.1",
     "nock": "^9.1.0",
@@ -49,7 +45,7 @@
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "sinon": "^4.1.2",
-    "snyk": "^1.49.1",
+    "snyk": "^1.49.4",
     "supertest": "^3.0.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
