# WAITER-16 ### Changed - [@waiter/domain](https://www.npmjs.com/package/@waiter/domain)をインストール。

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,16 +15,16 @@ jobs:
       # - run:
       #     name: Update npm
       #     command: 'sudo npm install -g npm@latest'
-      - run:
-          name: configure npm for private modules
-          command: |
-            npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-            npm whoami
+      # - run:
+      #     name: configure npm for private modules
+      #     command: |
+      #       npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+      #       npm whoami
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
           name: install npm packages
-          command: npm install
+          command: npm ci
       - save_cache:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
@@ -123,12 +123,12 @@ workflows:
       - doc:
           requires:
             - test
-      - deploy2development:
-          requires:
-            - doc
-          filters:
-            branches:
-              only: develop
+      # - deploy2development:
+      #     requires:
+      #       - doc
+      #     filters:
+      #       branches:
+      #         only: develop
       # - prerelease:
       #     requires:
       #       - doc
