--- a/package.json
+++ b/package.json
@@ -9,48 +9,48 @@
     }
   ],
   "dependencies": {
-    "@motionpicture/waiter-domain": "^2.0.1",
-    "body-parser": "^1.18.2",
+    "@waiter/domain": "^2.0.3",
+    "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
-    "express": "^4.16.2",
-    "express-validator": "^4.3.0",
-    "helmet": "^3.9.0",
-    "http-status": "^1.0.1",
-    "moment": "^2.19.2"
+    "express": "^4.16.3",
+    "express-validator": "^5.3.0",
+    "helmet": "^3.13.0",
+    "http-status": "^1.2.0",
+    "moment": "^2.22.2"
   },
-  "description": "Waiter web application",
+  "description": "Waiter API Application",
   "devDependencies": {
-    "@types/body-parser": "^1.16.8",
-    "@types/cors": "^2.8.3",
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
     "@types/debug": "0.0.30",
-    "@types/express": "^4.0.39",
-    "@types/helmet": "0.0.36",
+    "@types/express": "^4.16.0",
+    "@types/helmet": "0.0.38",
     "@types/http-status": "^0.2.30",
-    "@types/jsonwebtoken": "^7.2.3",
-    "@types/mocha": "^2.2.44",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/mocha": "^2.2.48",
     "@types/nock": "^8.2.1",
-    "@types/request": "^2.0.8",
-    "@types/request-promise-native": "^1.0.10",
+    "@types/request": "^2.47.1",
+    "@types/request-promise-native": "^1.0.15",
     "@types/sinon": "^2.3.7",
-    "@types/supertest": "^2.0.4",
-    "coveralls": "^3.0.0",
+    "@types/supertest": "^2.0.5",
+    "coveralls": "^3.0.2",
     "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.5.5",
-    "mocha": "^4.0.1",
-    "nock": "^9.1.0",
+    "mocha": "^4.1.0",
+    "nock": "^9.4.4",
     "nsp": "^2.8.1",
-    "nyc": "^11.3.0",
-    "request": "^2.83.0",
+    "nyc": "^11.9.0",
+    "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
-    "sinon": "^4.1.2",
-    "snyk": "^1.49.4",
-    "supertest": "^3.0.0",
-    "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "tslint-microsoft-contrib": "^5.0.1",
-    "typescript": "^2.6.1"
+    "sinon": "^4.5.0",
+    "snyk": "^1.90.0",
+    "supertest": "^3.1.0",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "tslint-microsoft-contrib": "^5.1.0",
+    "typescript": "^3.0.1"
   },
   "engines": {
     "node": ">=6.9.1",
@@ -62,7 +62,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/motionpicture/waiter.git"
+    "url": "https://github.com/waiter-jp/api.git"
   },
   "scripts": {
     "build": "tsc",
