--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "@waiter/domain": "^3.0.0-alpha.0",
+    "@waiter/domain": "^3.0.0-alpha.1",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
@@ -71,7 +71,8 @@
     "doc": "jsdoc -c jsdoc.json",
     "http-server": "http-server",
     "mocha": "mocha",
-    "coverage": "nyc mocha \"src/**/*.spec.ts\" | coveralls",
+    "nyc": "nyc mocha \"src/**/*.spec.ts\"",
+    "coverage": "npm run nyc && nyc report --reporter=text-lcov | coveralls",
     "samples": "http-server ./samples",
     "snyk": "snyk wizard",
     "start": "node dst/server.js",
