--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     }
   ],
   "dependencies": {
-    "@waiter/domain": "^3.0.0-alpha.1",
+    "@waiter/domain": "^3.0.0",
     "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "debug": "^3.1.0",
-    "express": "^4.16.3",
+    "cors": "^2.8.5",
+    "debug": "^3.2.6",
+    "express": "^4.16.4",
     "express-validator": "^5.3.0",
-    "helmet": "^3.13.0",
-    "http-status": "^1.2.0",
+    "helmet": "^3.15.0",
+    "http-status": "^1.3.1",
     "moment": "^2.22.2"
   },
   "description": "Waiter API Application",
@@ -30,27 +30,27 @@
     "@types/jsonwebtoken": "^7.2.8",
     "@types/mocha": "^2.2.48",
     "@types/nock": "^8.2.1",
-    "@types/request": "^2.47.1",
+    "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.15",
     "@types/sinon": "^2.3.7",
-    "@types/supertest": "^2.0.5",
+    "@types/supertest": "^2.0.6",
     "coveralls": "^3.0.2",
     "ink-docstrap": "^1.3.2",
     "jsdoc": "^3.5.5",
     "mocha": "^4.1.0",
-    "nock": "^9.4.4",
+    "nock": "^9.6.1",
     "nsp": "^2.8.1",
     "nyc": "^11.9.0",
-    "request": "^2.87.0",
+    "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
     "rimraf": "^2.6.2",
     "sinon": "^4.5.0",
-    "snyk": "^1.90.0",
-    "supertest": "^3.1.0",
-    "ts-node": "^7.0.0",
+    "snyk": "^1.111.1",
+    "supertest": "^3.3.0",
+    "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "tslint-microsoft-contrib": "^5.1.0",
-    "typescript": "^3.0.1"
+    "tslint-microsoft-contrib": "^5.2.1",
+    "typescript": "^3.2.1"
   },
   "engines": {
     "node": ">=6.9.1",
