--- a/package.json
+++ b/package.json
@@ -83,5 +83,5 @@
     "version": "git add -A",
     "postversion": "git push origin --tags"
   },
-  "version": "2.0.0"
+  "version": "3.0.0-alpha.0"
 }
