--- a/package.json
+++ b/package.json
@@ -84,5 +84,5 @@
     "version": "git add -A",
     "postversion": "git push origin --tags"
   },
-  "version": "3.1.0"
+  "version": "3.2.0-alpha.0"
 }
