### Added - 許可証発行規則にて利用可能期間をポジティブリストとして指定することができるように機能追加

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "@waiter/domain": "^4.1.0-alpha.0",
+    "@waiter/domain": "^4.1.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "debug": "^3.2.6",
