--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
     "version": "git add -A",
     "postversion": "git push origin --tags"
   },
-  "version": "3.2.0"
+  "version": "3.3.0-alpha.0"
 }
