### Changed - circleciのデプロイ連携を解除

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -178,22 +178,22 @@ workflows:
       - doc:
           requires:
             - test
-      - deploy2development:
-          requires:
-            - doc
-          filters:
-            branches:
-              only: develop
-      - prerelease:
-          requires:
-            - doc
-          filters:
-            branches:
-              only: /feature\/.+-alpha.+/
-      - deploy:
-          requires:
-            - doc
-          filters:
-            branches:
-              only: master
+      # - deploy2development:
+      #     requires:
+      #       - doc
+      #     filters:
+      #       branches:
+      #         only: develop
+      # - prerelease:
+      #     requires:
+      #       - doc
+      #     filters:
+      #       branches:
+      #         only: /feature\/.+-alpha.+/
+      # - deploy:
+      #     requires:
+      #       - doc
+      #     filters:
+      #       branches:
+      #         only: master
 
