--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "@waiter/domain": "^4.2.0",
+    "@waiter/domain": "4.3.0-alpha.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "debug": "^3.2.6",
