--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "@waiter/domain": "5.0.0-alpha.1",
+    "@waiter/domain": "5.0.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "debug": "^3.2.6",
@@ -32,6 +32,7 @@
     "@types/mocha": "^2.2.48",
     "@types/mongoose": "^5.3.12",
     "@types/nock": "^8.2.1",
+    "@types/node": "10.17.60",
     "@types/request": "^2.48.1",
     "@types/request-promise-native": "^1.0.15",
     "@types/sinon": "^2.3.7",
@@ -46,10 +47,10 @@
     "sinon": "^4.5.0",
     "snyk": "^1.111.1",
     "supertest": "^3.3.0",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "tslint-microsoft-contrib": "^5.2.1",
-    "typescript": "^3.2.1"
+    "ts-node": "^10.0.0",
+    "tslint": "^6.1.3",
+    "tslint-microsoft-contrib": "^6.2.0",
+    "typescript": "^4.3.5"
   },
   "engines": {
     "node": ">=8.0.0",
